comment the config file, add a way to set custom status

--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,15 @@
 [Discord]
 user = XXXXXXXXXXXX
 pass = XXXXXXXXXXXX
+# From localStorage.token
 token = XXXXXXXXXXXX
 
 [LastFM]
 user = XXXXXXXXXXXX
+# Go here https://www.last.fm/api/account/create
 apikey = XXXXXXXXXXXX
+
+[Options]
+# The status you want to display as while playing music
+# Pick from online, dnd, idle, invisible
+status=dnd
