--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,5 @@
 [Discord]
+# You can either use you discord login information, or your token
 user = XXXXXXXXXXXX
 pass = XXXXXXXXXXXX
 # From localStorage.token
