add a way to change format via the config

--- a/config.ini
+++ b/config.ini
@@ -16,3 +16,8 @@ apikey = XXXXXXXXXXXX
 # The status you want to display while playing music
 # Pick from online, dnd, idle, invisible
 status = online
+
+# The output format. Can be in any format you want.
+# List of variables supported : {song}, {artist}, {album}
+# Example: {song} by {artist} on {album}
+format = {artist} - {song}
