--- a/config.ini
+++ b/config.ini
@@ -18,6 +18,6 @@ apikey = XXXXXXXXXXXX
 status = online
 
 # The output format. Can be in any format you want.
-# List of variables supported : {song}, {artist}, {album}
-# Example: {song} by {artist} on {album}
+# List of variables supported : {song}, {artist}
+# Examples: {song} by {artist}
 format = {artist} - {song}
